@@ -1,5 +1,7 @@
 package com.maple.router.filter;
 
+import java.util.List;
+import java.util.Optional;
 import lombok.extern.slf4j.Slf4j;
 import lombok.val;
 import org.springframework.cloud.gateway.filter.GatewayFilter;
@@ -19,19 +21,24 @@ import reactor.core.publisher.Mono;
 public class SessionResolverFilter extends AbstractGatewayFilterFactory {
 
   private final WebClient webClient = WebClient.create();
+  private static final String HEADER_TRACE_ID = "x-b3-traceid";
 
   @Override
   public GatewayFilter apply(final Object config) {
     return (exchange, chain) -> {
       val request = exchange.getRequest();
       val authHeader = request.getHeaders().get(HttpHeaders.AUTHORIZATION);
+      val traceHeader = request.getHeaders().get(HEADER_TRACE_ID);
       if (authHeader == null || authHeader.size() != 1) {
         throw new HttpClientErrorException(HttpStatus.UNAUTHORIZED);
       }
       return webClient
           .get()
           .uri("http://maple-user-auth-service:8081/api/v1/auth/session")
-          .header(HttpHeaders.AUTHORIZATION, authHeader.get(0))
+          .header(HttpHeaders.AUTHORIZATION, authHeader.getFirst())
+          .header(
+              HEADER_TRACE_ID,
+              Optional.ofNullable(traceHeader).map(List::getFirst).orElse("unknown"))
           .retrieve()
           .bodyToMono(Session.class)
           .flatMap(
@@ -42,9 +49,7 @@ public class SessionResolverFilter extends AbstractGatewayFilterFactory {
                         .mutate()
                         .header("X-User-Roles", response.getRoles().toArray(roleArray))
                         .header("X-User-Id", String.valueOf(response.getUserId()))
-                        .header(
-                            "X-Organization-Id",
-                            String.valueOf(response.getOrganizationId()))
+                        .header("X-Organization-Id", String.valueOf(response.getOrganizationId()))
                         .build();
                 return chain.filter(exchange.mutate().request(newRequest).build());
               })
